Fix replaceAll() + úprava objektu, co vrací getMenu
